--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   mask_text_input_formatter: ^2.5.0
   footer: ^0.0.4
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
