--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   mask_text_input_formatter: ^2.5.0
   footer: ^0.0.4
   intl: ^0.18.1
+  firebase_core: ^2.13.1
 
 dev_dependencies:
   flutter_test:
