--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.18.1
   firebase_core: ^2.13.1
   cloud_firestore: ^4.8.0
+  firebase_auth: ^4.6.3
+  firebase_storage: ^11.2.4
 
 dev_dependencies:
   flutter_test:
