--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   cloud_firestore: ^4.8.0
   firebase_auth: ^4.6.3
   firebase_storage: ^11.2.4
+  provider: ^6.0.5
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
