--- a/cuidadoamigoapp/android/build.gradle
+++ b/cuidadoamigoapp/android/build.gradle
@@ -29,3 +29,8 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+defaultConfig {
+    ...
+    multiDexEnabled true
+}
