--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.0.5
   flutter_localizations:
     sdk: flutter
+  uuid: ^4.1.0
 
 dev_dependencies:
   flutter_test:
