--- a/cuidadoamigoapp/android/app/build.gradle
+++ b/cuidadoamigoapp/android/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id 'com.google.gms.google-services' 
 }
 
 def localProperties = new Properties()
@@ -21,6 +22,7 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
+
 
 android {
     namespace "com.example.cuidadoamigoapp"
@@ -45,7 +47,7 @@ android {
         applicationId "com.example.cuidadoamigoapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -67,4 +69,6 @@ flutter {
 
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1' // Adicione esta linha para a dependência Multidex
+    implementation(platform("com.google.firebase:firebase-bom:32.4.0"))
+    implementation("com.google.firebase:firebase-analytics-ktx")
 }
