--- a/cuidadoamigoapp/android/app/build.gradle
+++ b/cuidadoamigoapp/android/app/build.gradle
@@ -69,6 +69,6 @@ flutter {
 
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1' // Adicione esta linha para a dependência Multidex
-    implementation(platform("com.google.firebase:firebase-bom:32.4.0"))
-    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation platform('com.google.firebase:firebase-bom:32.5.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
