--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   uuid: ^4.1.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
