--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     sdk: flutter
   uuid: ^4.1.0
   image_picker: ^1.0.4
+  flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
