--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   cached_network_image: ^3.3.0
   fl_chart: ^0.64.0
   qr_flutter: ^4.1.0
+  timezone: ^0.9.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
