--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   qr_flutter: ^4.1.0
   timezone: ^0.9.2
   flutter_rating_bar: ^4.0.1
+  dart_bip21: ^1.0.0
 
 dev_dependencies:
   flutter_test:
