--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -37,11 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   mask_text_input_formatter: ^2.5.0
   footer: ^0.0.4
-  intl: ^0.18.1
-  firebase_core: ^2.13.1
-  cloud_firestore: ^4.12.2
-  firebase_auth: ^4.12.1
-  firebase_storage: ^11.4.1
+  intl: 0.19.0
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.3
+  firebase_auth: ^5.3.1
+  firebase_storage: ^12.3.2
   provider: ^6.0.5
   flutter_localizations:
     sdk: flutter
@@ -52,7 +52,7 @@ dependencies:
   csc_picker: ^0.2.7
   easy_localization: ^3.0.3
   cached_network_image: ^3.3.0
-  fl_chart: ^0.64.0
+  fl_chart: ^0.69.0
   qr_flutter: ^4.1.0
   timezone: ^0.9.2
   flutter_rating_bar: ^4.0.1
@@ -67,7 +67,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   
 
 # For information on the generic Dart part of this file, see the
