--- a/cuidadoamigoapp/pubspec.yaml
+++ b/cuidadoamigoapp/pubspec.yaml
@@ -85,7 +85,7 @@ flutter:
 
   assets:
   - Assets/imagens/
-  - .env
+  - ./.env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
