--- a/cuidado_amigo/macos/Runner/Configs/AppInfo.xcconfig
+++ b/cuidado_amigo/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = cuidado_amigo
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.cuidadoAmigo
+PRODUCT_BUNDLE_IDENTIFIER = com.example.cuidado_amigo
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
