--- a/cuidado_amigo/pubspec.yaml
+++ b/cuidado_amigo/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   firebase_ui_auth: ^1.16.0
   flutter_dotenv: ^5.1.0
+  search_cep: ^4.0.2
 
 dev_dependencies:
   flutter_test:
