Cleaning and fix for gradle build

--- a/cuidado_amigo/android/app/build.gradle
+++ b/cuidado_amigo/android/app/build.gradle
@@ -28,7 +28,7 @@ if (flutterVersionName == null) {
 
 
 android {
-    namespace "com.example.cuidado_amigo"
+    namespace "com.example.cuidadoamigo"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
